@@ -1,5 +1,6 @@
 **0.2.4**
 - Fix simplecache key name enconding as unicode not bytestring
+- Add prop_id for numdbiditems/numtmdbitems e.g. Window(Home).Property(TMDBHelper.prop_id.NumDBIDItems)
 
 **0.2.3**
 - Add splitting for tmdb_id lookups using &query=
